# GLAURLex

./: .dockerignore  .env.example  .gitignore  Dockerfile  Doxyfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_urlex.py
.github/workflows/: build-windows-exe.yml  ci.yml  release.yml
deploy/: README.md
deploy/authelia/: configuration.dev.yml  configuration.yml  users_database.dev.yml  users_database.yml
deploy/traefik/: traefik.dev.yml  traefik.yml
deploy/traefik/dynamic/: middlewares.yml  routers.yml
deploy/traefik/dynamic-dev/: middlewares.yml  routers.yml
scripts/: add-authelia-user.sh  dev-up.sh  generate_visualize_artifacts.py  run_glaurlex.py  run_urlex.py
src/glaurlex/: __init__.py  config.py
src/glaurlex/core/: dataset_service.py  example_data.py  graph.py  graph_service.py  groups.py  groups_store.py  inference.py  metrics_catalog.py  models.py  salamanca_processing.py  stats.py  variables_store.py  xlsx_processing.py
src/glaurlex/ui/: app.py  metrics_cache.py  state.py
src/glaurlex/ui/components/: sidebar.py
src/glaurlex/ui/views/: charts.py  graphs.py  grouping.py  home.py  inference.py  informant_stats.py  load_data.py  variables.py  visualize.py
src/urlex/: __init__.py  config.py
src/urlex/core/: dataset_service.py  graph.py  graph_service.py  groups.py  groups_store.py  models.py  salamanca_processing.py  stats.py  xlsx_processing.py
src/urlex/ui/: app.py  state.py
src/urlex/ui/components/: sidebar.py
src/urlex/ui/views/: graphs.py  grouping.py  load_data.py  visualize.py
tests/: test_dataset_service.py  test_example_data.py  test_graph.py  test_graph_service.py  test_groups.py  test_inference_ordinal.py  test_salamanca.py  test_stats.py  test_vacio.py  test_xlsx.py
