[tool.poetry]
name = "glaurlex"
version = "0.1.0"
description = ""
authors = ["magomerob <magomerob@unirioja.es>"]
readme = "README.md"
packages = [{ include = "glaurlex", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.52.2"
pandas = "^2.3.3"
openpyxl = "^3.1.5"
fastparquet = "^2025.12.0"
pyarrow = "^23.0.0"
pytest = "^9.0.2"
matplotlib = "^3.10.8"
seaborn = "^0.13.0"
networkx = { version = "^3.6.1", python = ">=3.11,<3.14.1 || >3.14.1,<4.0" }
scipy = "^1.17.0"
leidenalg = "^0.11.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
